--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,6 +16,8 @@
         /* Zinc-200 */
         --input: 240 5.9% 90%;
         --ring: 240 10% 3.9%;
+        --sidebar-background: 0 0% 98%;
+        --sidebar-foreground: 240 5.9% 10%;
     }
 
     .dark {
@@ -31,6 +33,8 @@
         /* Zinc-800 */
         --input: 240 3.7% 15.9%;
         --ring: 240 4.9% 83.9%;
+        --sidebar-background: 240 3.7% 15.9%;
+        --sidebar-foreground: 0 0% 98%;
     }
 
     body {
